--- a/app/globals.css
+++ b/app/globals.css
@@ -4,18 +4,18 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #1a1a1a;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #eeeeee;
+    --foreground: #1f1f1f;
   }
 }
-
+/* text color depends on  color: var*/
 body {
-  color: var(--foreground);
+  color: var(--foreground); 
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
